Changed travis settings for prod

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,14 @@ branches:
     - master
 
 before_script:
-  - npm install
+  - npm install -g @angular/cli
   
 script:
-  - ng build
+  - ng build --prod
+  - bash ./.build.sh
+  
+before_deploy:
+  - cd dist
   
 deploy:
   provider: bluemixcloudfoundry
