--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ deploy:
   provider: bluemixcloudfoundry
   skip_cleanup: true
   manifest: manifest.yml
-  username: $BLUEMIX_USER
-  password: $BLUEMIX_PASSWORD
-  organization: $BLUEMIX_ORGANIZATION
-  space: $BLUEMIX_SPACE
+  username: pradnyamankar@yahoo.com
+  password: Persistent@123
+  organization: Persistent Sys L
+  space: dev
   on:
     branch: master
