--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: node_js
 node_js:
   - 7.9.0
 
-sudo: true
-
 branches:
   only:
     - master
@@ -13,6 +11,7 @@ before_script:
   
 script:
   - ng build --prod
+  - bash ./.build.sh
   
 before_deploy:
   - cd dist
