--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,9 @@
 applications:
 - path: .
-  memory: 256M
   instances: 1
   domain: mybluemix.net
   name: ChatApp
   host: chatapp
   disk_quota: 1024M
+  random-route: true
+  memory: 256M
