--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   api: https://api.ng.bluemix.net
   username: $BLUEMIX_USER
   password: $BLUEMIX_PASS
-  organization: "$BLUEMIX_ORGANIZATION"
+  organization: $BLUEMIX_ORGANIZATION
   space: $BLUEMIX_SPACE
   
   on:
