--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
-- path: .
+- name: ChatApp
+  path: .
   instances: 1
   domain: mybluemix.net
-  name: ChatApp
   host: chatapp
   disk_quota: 1024M
   random-route: true
