--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   password: $BLUEMIX_PASS
   organization: $BLUEMIX_ORGANIZATION
   space: $BLUEMIX_SPACE
-  
+  app: ChatApp
   on:
     repo: PradnyaM14/ChatApp
     branch: master
