--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
-- name: ChatApp
+- name: chat-app
   path: .
   instances: 1
   domain: mybluemix.net
-  host: chatapp
+  host: chat-app
   disk_quota: 1024M
-  memory: 256M
+  memory: 512M
