--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 applications:
-- name: chat-app
+- name: ChatApp
   path: .
   instances: 1
   domain: mybluemix.net
-  host: chat-app
+  host: chatapp
   disk_quota: 1024M
   memory: 512M
