--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
   path: .
   instances: 1
   domain: mybluemix.net
-  host: chatapp
+  host: bankchatapp
   disk_quota: 1024M
   memory: 512M
