--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,13 @@
-dist: trusty
-sudo: required
 language: node_js
 node_js:
 - 7.9.0
 branches:
   only:
   - master
-os:
-  - linux
-env:
-  global:
-    - DBUS_SESSION_BUS_ADDRESS=/dev/null
-    - DISPLAY=:99.0
-    - CHROME_BIN=chromium-browser
 before_script:
-- sh -e /etc/init.d/xvfb start
-install:
 - npm install
 script:
-#- ng build
-- npm run test:once
-- npm run e2e
+- ng serve
 deploy:
   edge: true
   provider: bluemixcloudfoundry
