--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ branches:
   only:
   - master
 before_script:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+install:
 - npm install
 script:
-- ng serve
+- ng build
 deploy:
   edge: true
   provider: bluemixcloudfoundry
