--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
+dist: trusty
+sudo: required
 language: node_js
 node_js:
 - 7.9.0
 branches:
   only:
   - master
+os:
+  - linux
+env:
+  global:
+    - DBUS_SESSION_BUS_ADDRESS=/dev/null
+    - DISPLAY=:99.0
+    - CHROME_BIN=chromium-browser
 before_script:
-- export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 install:
 - npm install
