--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 - sh -e /etc/init.d/xvfb start
 install:
 - npm install
-- nvm install
+#- nvm install
 script:
 #- ng build
 - npm run e2e
