--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,15 @@ branches:
   - master
 os:
   - linux
+addons:
+  chrome: stable
 env:
   global:
     - DBUS_SESSION_BUS_ADDRESS=/dev/null
-    - DISPLAY=:99.0
-    - CHROME_BIN=chromium-browser
-before_script:
-- sh -e /etc/init.d/xvfb start
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 install:
 - npm install
 #- nvm install
